--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,4 @@
 markers =
     setup: marks tests as setup (deselect with '-m "not slow"')
     sim: marks tests as sims
+    oldsim: These need to be ported to refactored simulation
